renaming of css utilities / fix broken gap declarations

--- a/packages/styles/src/foundation/_box-shadow.scss
+++ b/packages/styles/src/foundation/_box-shadow.scss
@@ -1,21 +1,21 @@
 @for $i from 1 through 4 {
-    .o-ui-bs-#{$i} {
+    .o-ui-bxsh-#{$i} {
         box-shadow: var(--o-ui-box-shadows-#{$i});
     }
 }
 
-.o-ui-bs-skim {
+.o-ui-bxsh-skim {
     box-shadow: var(--o-ui-box-shadows-skim);
 }
 
-.o-ui-bs-lifted {
+.o-ui-bxsh-lifted {
     box-shadow: var(--o-ui-box-shadows-lifted);
 }
 
-.o-ui-bs-raised {
+.o-ui-bxsh-raised {
     box-shadow: var(--o-ui-box-shadows-raised);
 }
 
-.o-ui-bs-floating {
+.o-ui-bxsh-floating {
     box-shadow: var(--o-ui-box-shadows-floating);
 }
