--- a/packages/styles/src/foundation/_flex-basis.scss
+++ b/packages/styles/src/foundation/_flex-basis.scss
@@ -1,23 +1,23 @@
-.o-ui-b-a {
+.o-ui-fb-a {
     flex-basis: auto;
 }
 
-.o-ui-b-f {
+.o-ui-fb-f {
     flex-basis: fill;
 }
 
-.o-ui-b-mxc {
+.o-ui-fb-mxc {
     flex-basis: max-content;
 }
 
-.o-ui-b-mnc {
+.o-ui-fb-mnc {
     flex-basis: min-content;
 }
 
-.o-ui-b-fc {
+.o-ui-fb-fc {
     flex-basis: fit-content;
 }
 
-.o-ui-b-c {
+.o-ui-fb-c {
     flex-basis: content;
 }
