--- a/packages/styles/src/foundation/_opacity.scss
+++ b/packages/styles/src/foundation/_opacity.scss
@@ -1,11 +1,11 @@
-.o-ui-opc-nv {
+.o-ui-op-nv {
     opacity: 0;
 }
 
-.o-ui-opc-d {
+.o-ui-op-d {
     opacity: .4;
 }
 
-.o-ui-opc-v {
+.o-ui-op-v {
     opacity: 1;
 }
