--- a/packages/styles/src/foundation/_overflow.scss
+++ b/packages/styles/src/foundation/_overflow.scss
@@ -1,59 +1,59 @@
-.o-ui-ovf-h {
+.o-ui-ov-h {
     overflow: hidden;
 }
 
-.o-ui-ovf-v {
+.o-ui-ov-v {
     overflow: visible;
 }
 
-.o-ui-ovf-scroll {
+.o-ui-ov-scroll {
     overflow: scroll;
 }
 
-.o-ui-ovf-c {
+.o-ui-ov-c {
     overflow: clip;
 }
 
-.o-ui-ovf-a {
+.o-ui-ov-a {
     overflow: auto;
 }
 
-.o-ui-ovf-x-h {
+.o-ui-ov-x-h {
     overflow-x: hidden;
 }
 
-.o-ui-ovf-x-v {
+.o-ui-ov-x-v {
     overflow-x: visible;
 }
 
-.o-ui-ovf-x-scroll {
+.o-ui-ov-x-scroll {
     overflow-x: scroll;
 }
 
-.o-ui-ovf-x-c {
+.o-ui-ov-x-c {
     overflow-x: clip;
 }
 
-.o-ui-ovf-x-a {
+.o-ui-ov-x-a {
     overflow-x: auto;
 }
 
-.o-ui-ovf-y-h {
+.o-ui-ov-y-h {
     overflow-y: hidden;
 }
 
-.o-ui-ovf-y-v {
+.o-ui-ov-y-v {
     overflow-y: visible;
 }
 
-.o-ui-ovf-y-scroll {
+.o-ui-ov-y-scroll {
     overflow-y: scroll;
 }
 
-.o-ui-ovf-y-a {
+.o-ui-ov-y-a {
     overflow-y: auto;
 }
 
-.o-ui-ovf-y-c {
+.o-ui-ov-y-c {
     overflow-y: clip;
 }
